--- a/mockHello/pom.xml
+++ b/mockHello/pom.xml
@@ -19,6 +19,14 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        
+		<!-- https://mvnrepository.com/artifact/org.easymock/easymock -->
+		<dependency>
+		    <groupId>org.easymock</groupId>
+		    <artifactId>easymock</artifactId>
+		    <version>4.1</version>
+		    <scope>test</scope>
+		</dependency>
     </dependencies>
     <build>
         <finalName>mockHello</finalName>
