--- a/mockHello/pom.xml
+++ b/mockHello/pom.xml
@@ -27,6 +27,14 @@
 		    <version>4.1</version>
 		    <scope>test</scope>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.jmock/jmock-junit4 -->
+		<dependency>
+		    <groupId>org.jmock</groupId>
+		    <artifactId>jmock-junit4</artifactId>
+		    <version>2.12.0</version>
+		    <scope>test</scope>
+		</dependency>
     </dependencies>
     <build>
         <finalName>mockHello</finalName>
